--- a/src/components/views/Schedule/Calendar/Calendar.css
+++ b/src/components/views/Schedule/Calendar/Calendar.css
@@ -229,6 +229,7 @@ main {
 	opacity: 0;
 	font-size: 8em;
 	position: absolute;
+	z-index: -1;
 	top: -0.2em;
 	right: -0.05em;
 	transition: 0.25s ease-out;
