Calendar and MobileCalendar are now both rendered. however MobileCalendar is displayed below 601px, where Calendar is displayed ABOVE 600px width.

--- a/src/components/views/Schedule/Calendar/Calendar.css
+++ b/src/components/views/Schedule/Calendar/Calendar.css
@@ -118,6 +118,12 @@ main {
 	border: 1px solid var(--border-color);
 }
 
+@media (max-width: 600px) {
+	.calendar {
+		display: none;
+	}
+}
+
 .calendar .header {
 	text-transform: uppercase;
 	font-weight: 700;
