--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@ body {
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	position: relative;
+	min-height: 100vh;
+	height: 100%;
 }
 
 code {
