--- a/src/components/views/Schedule/Calendar/Calendar.css
+++ b/src/components/views/Schedule/Calendar/Calendar.css
@@ -22,8 +22,8 @@
 /* VARIABLES */
 
 :root {
-	--main-color: #ff5a09;
-	--light-main: #ec7f37;
+	--main-color: #db762e;
+	--light-main: #ff7400;
 	--text-color: #393939;
 	--text-color-light: #a5a5a5;
 	--border-color: rgba(0, 0, 0, 0.13);
