--- a/src/components/views/Schedule/Calendar/Calendar.css
+++ b/src/components/views/Schedule/Calendar/Calendar.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300, 400, 700);
+/* @import url(https://fonts.googleapis.com/css?family=Open+Sans:300, 400, 700); */
 @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
 
 .icon {
@@ -32,6 +32,14 @@
 }
 
 /* GENERAL */
+/* div.App {
+	padding-right: 62px;
+} */
+
+div.sc-bZQynM.kongkz {
+	max-width: 90%;
+	padding-right: 62px;
+}
 
 * {
 	box-sizing: border-box;
@@ -45,6 +53,7 @@ body {
 	color: var(--text-color);
 	background: var(--bg-color);
 	position: relative;
+
 }
 
 header {
@@ -70,7 +79,10 @@ main {
 	display: block;
 	margin: 0 auto;
 	margin-top: 5em;
-	max-width: 50em;
+	max-width: 100%;
+
+
+
 }
 
 /* GRID */
@@ -107,6 +119,7 @@ main {
 .col-end {
 	justify-content: flex-end;
 	text-align: right;
+
 }
 
 /* Calendar */
@@ -117,14 +130,20 @@ main {
 	width: 100%;
 	background: var(--neutral-color);
 	border: 1px solid var(--border-color);
-	margin: 48px auto;
+	margin: 40px;
 	border-radius: 4px;
 	box-shadow: 0px 0px 1px black;
+
 }
 
 @media (max-width: 600px) {
+	div.sc-bZQynM.kongkz {
+		padding-right: 0;
+	}
+
 	.calendar {
 		display: none;
+
 	}
 }
 
