Added a fix for calendar layout breaking on the Edge browser.

--- a/src/components/views/Schedule/Calendar/Calendar.css
+++ b/src/components/views/Schedule/Calendar/Calendar.css
@@ -223,6 +223,9 @@ main {
 
 .calendar .body .row {
 	border-bottom: 1px solid var(--border-color);
+	width: 100%;
+	display: flex;
+	flex-wrap: nowrap;
 }
 
 .calendar .body .row:last-child {
