--- a/public/landingpage/css/main.css
+++ b/public/landingpage/css/main.css
@@ -1070,6 +1070,13 @@ ul.nav > li > a.active {
 	box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
 	-webkit-transform: translateY(1.1);
 	transition: all 0.2s ease-in-out;
+	cursor: pointer;
+}
+.get-started-btn {
+	background: var(--secondary-color);
+	padding: 20px 40px;
+	color: white;
+	border-radius: 2px;
 }
 
 /* ==========================================================================
