Updated Pricing section to have relevant information to our application.

--- a/public/landingpage/css/main.css
+++ b/public/landingpage/css/main.css
@@ -1006,7 +1006,7 @@ ul.nav > li > a.active {
 /* ==========================================================================
    Pricing Section
    ========================================================================== */
-.pricing-section {
+.pricing-section .container {
 }
 .pricing-box {
 	background: linear-gradient(to top, var(--main-color) 0%, #ffb199 100%);
