Main Background image for header added.

--- a/public/landingpage/css/main.css
+++ b/public/landingpage/css/main.css
@@ -598,7 +598,7 @@ ul.nav > li > a.active {
    Hero Section
    ========================================================================== */
 .hero-section {
-	background-image: url(../img/hero.jpg);
+	background-image: url(../img/bgmain.jpg);
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: cover;
