--- a/public/landingpage/css/main.css
+++ b/public/landingpage/css/main.css
@@ -31,6 +31,7 @@
 :root {
 	--main-color: #db762e;
 	--light-main: #ff7400;
+	--dark-main: #725f50;
 	--secondary-color: #1c8383;
 	--light-secondary: #3b9c9c;
 }
@@ -392,7 +393,11 @@ body.loaded #preloader {
 	margin-bottom: 15px;
 }
 .default-btn {
-	background: linear-gradient(to right, var(--main-color) 0%, #ffb199 100%);
+	background: linear-gradient(
+		to right,
+		var(--main-color) 0%,
+		var(--light-main) 100%
+	);
 	font-size: 10px;
 	font-weight: 600;
 	letter-spacing: 2px;
@@ -403,7 +408,11 @@ body.loaded #preloader {
 	display: inline-block;
 }
 .default-btn:hover {
-	background: linear-gradient(to left, var(--main-color) 0%, #ffb199 100%);
+	background: linear-gradient(
+		to left,
+		var(--main-color) 0%,
+		var(--light-main) 100%
+	);
 	color: #fff;
 }
 
@@ -613,7 +622,11 @@ ul.nav > li > a.active {
 	z-index: 1;
 }
 .hero-section:before {
-	background: linear-gradient(to top, var(--main-color) 0%, #ffb199 100%);
+	background: linear-gradient(
+		to top,
+		var(--main-color) 0%,
+		var(--light-main) 100%
+	);
 	content: "";
 	width: 100%;
 	height: 100%;
@@ -677,7 +690,11 @@ ul.nav > li > a.active {
 	transition: all 0.2s ease-in-out;
 }
 .feature-content i {
-	background-image: linear-gradient(to top, var(--main-color) 0%, #ffb199 100%);
+	background-image: linear-gradient(
+		to top,
+		var(--main-color) 0%,
+		var(--light-main) 100%
+	);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 	font-weight: 700;
@@ -767,7 +784,11 @@ ul.nav > li > a.active {
 	z-index: 1;
 }
 .how-it-works-section:before {
-	background: linear-gradient(to top, var(--main-color) 0%, #ffb199 100%);
+	background: linear-gradient(
+		to top,
+		var(--main-color) 0%,
+		var(--light-main) 100%
+	);
 	content: "";
 	position: absolute;
 	width: 100%;
@@ -910,7 +931,11 @@ ul.nav > li > a.active {
 	width: 30px;
 	height: 30px;
 	line-height: 30px;
-	background-image: linear-gradient(to top, var(--main-color) 0%, #ffb199 100%);
+	background-image: linear-gradient(
+		to top,
+		var(--main-color) 0%,
+		var(--light-main) 100%
+	);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 	font-size: 30px;
@@ -951,14 +976,18 @@ ul.nav > li > a.active {
 	-moz-border-image: -moz-linear-gradient(
 		to top,
 		var(--main-color) 0%,
-		#ffb199 100%
+		var(--light-main) 100%
 	);
 	-webkit-border-image: -webkit-linear-gradient(
 		to top,
 		var(--main-color) 0%,
-		#ffb199 100%
+		var(--light-main) 100%
 	);
-	border-image: linear-gradient(to top, var(--main-color) 0%, #ffb199 100%);
+	border-image: linear-gradient(
+		to top,
+		var(--main-color) 0%,
+		var(--light-main) 100%
+	);
 	border-image-slice: 1;
 	box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
 	width: 150px;
@@ -967,7 +996,11 @@ ul.nav > li > a.active {
 	text-align: center;
 }
 .team-thumb:before {
-	background: linear-gradient(to top, var(--main-color) 0%, #ffb199 100%);
+	background: linear-gradient(
+		to top,
+		var(--main-color) 0%,
+		var(--light-main) 100%
+	);
 	content: "";
 	width: 2px;
 	height: 40px;
@@ -1009,7 +1042,11 @@ ul.nav > li > a.active {
 .pricing-section .container {
 }
 .pricing-box {
-	background: linear-gradient(to top, var(--main-color) 0%, #ffb199 100%);
+	background: linear-gradient(
+		to top,
+		var(--main-color) 0%,
+		var(--light-main) 100%
+	);
 	padding: 40px 0;
 	border-radius: 5px;
 	transition: all 0.2s ease-in-out;
@@ -1097,7 +1134,11 @@ ul.nav > li > a.active {
 	z-index: 1;
 }
 .review-section:before {
-	background: linear-gradient(to top, var(--main-color) 0%, #ffb199 100%);
+	background: linear-gradient(
+		to top,
+		var(--main-color) 0%,
+		var(--light-main) 100%
+	);
 	content: "";
 	position: absolute;
 	width: 100%;
@@ -1254,7 +1295,11 @@ ul.nav > li > a.active {
    Download Section
    ========================================================================== */
 .download-section {
-	background: linear-gradient(to top, var(--main-color) 0%, #ffb199 100%);
+	background: linear-gradient(
+		to top,
+		var(--main-color) 0%,
+		var(--light-main) 100%
+	);
 	padding: 100px 0 200px;
 	position: relative;
 	z-index: 1;
@@ -1302,7 +1347,11 @@ ul.nav > li > a.active {
 	position: relative;
 }
 .subscribe-form .form-input {
-	background: linear-gradient(to right, var(--main-color) 0%, #ffb199 100%);
+	background: linear-gradient(
+		to right,
+		var(--main-color) 0%,
+		var(--light-main) 100%
+	);
 	display: block;
 	color: #777;
 	font-size: 14px;
@@ -1347,9 +1396,9 @@ ul.nav > li > a.active {
 	height: 40px;
 	line-height: 38px;
 	text-align: center;
-	color: #ffb199;
+	color: var(--light-main);
 	border-radius: 1px;
-	border: 2px solid #ffb199;
+	border: 2px solid var(--light-main);
 }
 .social-share li a:hover {
 	border: 2px solid var(--main-color);
@@ -1391,6 +1440,6 @@ ul.nav > li > a.active {
 	z-index: 999;
 }
 #scroll-to-top:hover {
-	background-color: #ffb199;
+	background-color: var(--light-main);
 	color: #fff;
 }
