--- a/public/landingpage/css/main.css
+++ b/public/landingpage/css/main.css
@@ -458,7 +458,7 @@ button {
 	padding: 10px 0;
 }
 .navbar-fixed-top.header-section {
-	background-color: var(--light-main);
+	background-color: var(--main-color);
 	box-shadow: 0px 16px 28px 0px rgba(0, 0, 0, 0.05);
 	height: 70px;
 	border-bottom: 0;
@@ -1410,7 +1410,7 @@ ul.nav > li > a.active {
    Footer Section
    ========================================================================== */
 .footer-section {
-	background-color: var(--light-main);
+	background-color: var(--main-color);
 	display: block;
 	color: #fff;
 	text-align: center;
